--- a/nav.html
+++ b/nav.html
@@ -59,19 +59,10 @@
 
 	<nav class="navMenu  border">
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
-		<a id="inbox" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-inbox"></i> Inbox</a>
-		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> Planner</a>
-		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-briefcase"></i> Projects</a>
-		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Tasks</a>
-		<a id="business" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-money-bill-wave"></i> Business</a>
-		<a id="knowledge" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-lightbulb"></i> Knowledge</a>
-		<a id="topics" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-layer-group"></i> Topics</a>
-		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i> Notes</a>
-		<a id="media" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bookmark"></i> Media</a>
-		<a id="resourses" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-wrench"></i> Resourses</a>
-		<a id="lifewiki" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart"></i> Lifewiki</a>
-
-
+		<a id="reserveren" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> Reserveren</a>
+		<a id="onderzoek" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i> Onderzoek</a>
+		<a id="producten" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart"></i> Producten</a>
+		<a id="contact" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-inbox"></i> Contact</a>
 
 	</nav>
 
@@ -87,32 +78,16 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "inbox")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "week")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "month")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "projects")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "business")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "tasks")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "knowledge")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "topics")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "notes")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "media")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "resourses")
-				window.open("https://example.com3", '_blank').focus();
-			else if (id == "lifewiki")
-				window.open("https://example.com", '_blank').focus();
-
+				window.open("https://www.notion.so/Imkerij-de-Haspengouw-home-2edd7b2895c742f3a9993b49f4529f5e", '_blank').focus();
+			else if (id == "contact")
+				window.open("https://www.notion.so/Imkerij-de-Haspengouw-Contact-010b5db7442b4452ba3f61b14eae5a4a", '_blank').focus();
+			else if (id == "reserveren")
+				window.open("https://www.notion.so/Imkerij-de-Haspengouw-reserveren-3de1b54ff50b4bdb99bf4fdae965d308", '_blank').focus();
+			else if (id == "onderzoek")
+				window.open("https://www.notion.so/Imkerij-de-Haspengouw-onderzoek-45bea05786b24878aeffde697ba6ac5b", '_blank').focus();
+			else if (id == "producten")
+				window.open("https://www.notion.so/Imkerij-de-Haspengouw-Producten-e0ee3024bcf8446896ec2e24e29c20cc", '_blank').focus();
+			
 		}
 	</script>
 
