--- a/nav.html
+++ b/nav.html
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #272727;
+			color: #0b6c31;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -78,15 +78,15 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://www.notion.so/Imkerij-de-Haspengouw-home-2edd7b2895c742f3a9993b49f4529f5e", '_blank').focus();
+				window.open("https://pine-nation-1e4.notion.site/Imkerij-de-Haspengouw-Home-2edd7b2895c742f3a9993b49f4529f5e?pvs=4", '_blank').focus();
 			else if (id == "contact")
-				window.open("https://www.notion.so/Imkerij-de-Haspengouw-Contact-010b5db7442b4452ba3f61b14eae5a4a", '_blank').focus();
+				window.open("https://pine-nation-1e4.notion.site/Imkerij-de-Haspengouw-Contact-010b5db7442b4452ba3f61b14eae5a4a?pvs=4", '_blank').focus();
 			else if (id == "reserveren")
-				window.open("https://www.notion.so/Imkerij-de-Haspengouw-reserveren-3de1b54ff50b4bdb99bf4fdae965d308", '_blank').focus();
+				window.open("https://pine-nation-1e4.notion.site/Imkerij-de-Haspengouw-Reserveren-3de1b54ff50b4bdb99bf4fdae965d308?pvs=4", '_blank').focus();
 			else if (id == "onderzoek")
-				window.open("https://www.notion.so/Imkerij-de-Haspengouw-onderzoek-45bea05786b24878aeffde697ba6ac5b", '_blank').focus();
+				window.open("https://pine-nation-1e4.notion.site/Imkerij-de-Haspengouw-onderzoek-45bea05786b24878aeffde697ba6ac5b?pvs=4", '_blank').focus();
 			else if (id == "producten")
-				window.open("https://www.notion.so/Imkerij-de-Haspengouw-Producten-e0ee3024bcf8446896ec2e24e29c20cc", '_blank').focus();
+				window.open("https://pine-nation-1e4.notion.site/Imkerij-de-Haspengouw-Producten-e0ee3024bcf8446896ec2e24e29c20cc?pvs=4", '_blank').focus();
 			
 		}
 	</script>
