--- a/nav.html
+++ b/nav.html
@@ -59,7 +59,7 @@
 
 	<nav class="navMenu  border">
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
-		<a id="reserveren" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> Reserveren</a>
+		<a id="b2b" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> B2B</a>
 		<a id="onderzoek" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i> Onderzoek</a>
 		<a id="producten" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart"></i> Producten</a>
 		<a id="contact" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-inbox"></i> Contact</a>
@@ -81,7 +81,7 @@
 				window.open("https://pine-nation-1e4.notion.site/Imkerij-de-Haspengouw-Home-2edd7b2895c742f3a9993b49f4529f5e?pvs=4", '_blank').focus();
 			else if (id == "contact")
 				window.open("https://pine-nation-1e4.notion.site/Imkerij-de-Haspengouw-Contact-010b5db7442b4452ba3f61b14eae5a4a?pvs=4", '_blank').focus();
-			else if (id == "reserveren")
+			else if (id == "b2b")
 				window.open("https://pine-nation-1e4.notion.site/Imkerij-de-Haspengouw-Reserveren-3de1b54ff50b4bdb99bf4fdae965d308?pvs=4", '_blank').focus();
 			else if (id == "onderzoek")
 				window.open("https://pine-nation-1e4.notion.site/Imkerij-de-Haspengouw-onderzoek-45bea05786b24878aeffde697ba6ac5b?pvs=4", '_blank').focus();
