open in same window
I replaced window.open() with window.location.href to change the location of the current window/tab when a link is clicked. This will open the new URLs in the same tab and window.

--- a/nav.html
+++ b/nav.html
@@ -76,19 +76,23 @@
 
 
 		function navigate(id) {
-
-			if (id == 'home')
-				window.open("https://mbpholding.notion.site/Imkerij-de-Haspengouw-Home-2edd7b2895c742f3a9993b49f4529f5e?pvs=4", '_blank').focus();
-			else if (id == "contact")
-				window.open("https://mbpholding.notion.site/Imkerij-de-Haspengouw-Contact-010b5db7442b4452ba3f61b14eae5a4a?pvs=4", '_blank').focus();
-			else if (id == "b2b")
-				window.open("https://mbpholding.notion.site/Imkerij-de-Haspengouw-Reserveren-3de1b54ff50b4bdb99bf4fdae965d308?pvs=4", '_blank').focus();
-			else if (id == "onderzoek")
-				window.open("https://mbpholding.notion.site/Imkerij-de-Haspengouw-onderzoek-45bea05786b24878aeffde697ba6ac5b?pvs=4", '_blank').focus();
-			else if (id == "producten")
-				window.open("https://mbpholding.notion.site/Imkerij-de-Haspengouw-Producten-e0ee3024bcf8446896ec2e24e29c20cc?pvs=4", '_blank').focus();
 			
-		}
+            if (id == "home")
+                window.location.href =
+                    "https://mbpholding.notion.site/Imkerij-de-Haspengouw-Home-2edd7b2895c742f3a9993b49f4529f5e?pvs=4";
+            else if (id == "contact")
+                window.location.href =
+                    "https://mbpholding.notion.site/Imkerij-de-Haspengouw-Contact-010b5db7442b4452ba3f61b14eae5a4a?pvs=4";
+            else if (id == "b2b")
+                window.location.href =
+                    "https://mbpholding.notion.site/Imkerij-de-Haspengouw-Reserveren-3de1b54ff50b4bdb99bf4fdae965d308?pvs=4";
+            else if (id == "onderzoek")
+                window.location.href =
+                    "https://mbpholding.notion.site/Imkerij-de-Haspengouw-onderzoek-45bea05786b24878aeffde697ba6ac5b?pvs=4";
+            else if (id == "producten")
+                window.location.href =
+                    "https://mbpholding.notion.site/Imkerij-de-Haspengouw-Producten-e0ee3024bcf8446896ec2e24e29c20cc?pvs=4";
+        }
 	</script>
 
 
