--- a/navigation.html
+++ b/navigation.html
@@ -79,31 +79,14 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://example.com", '_blank').focus();
+				window.open("https://mbpholding.notion.site/Epicurus-Reviews-Home-b11ed529428648588f205ba1a0317db5?pvs=4", '_blank').focus();
 			else if (id == "inbox")
-				window.open("https://example.com", '_blank').focus();
+				window.open("https://mbpholding.notion.site/Epicurus-Reviews-Reports-e6bee9ea06b74b1cba262ecc4df32cb3?pvs=4", '_blank').focus();
 			else if (id == "week")
-				window.open("https://example.com", '_blank').focus();
+				window.open("https://mbpholding.notion.site/Epicurus-Reviews-Career-94236587963746adb7922cc6636a4783?pvs=4", '_blank').focus();
 			else if (id == "month")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "projects")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "business")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "tasks")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "knowledge")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "topics")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "notes")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "media")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "resourses")
-				window.open("https://example.com3", '_blank').focus();
-			else if (id == "lifewiki")
-				window.open("https://example.com", '_blank').focus();
+				window.open("https://mbpholding.notion.site/Epicurus-Reviews-About-2216f09fb816493492cef56ac33bf476?pvs=4", '_blank').focus();
+			
 
 		}
 	</script>
