--- a/navigation.html
+++ b/navigation.html
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #272727;
+			color: #00007f;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
