--- a/navigation.html
+++ b/navigation.html
@@ -80,11 +80,11 @@
 
 			if (id == 'home')
 				window.open("https://mbpholding.notion.site/Epicurus-Reviews-Home-b11ed529428648588f205ba1a0317db5?pvs=4", '_blank').focus();
-			else if (id == "inbox")
+			else if (id == "reports")
 				window.open("https://mbpholding.notion.site/Epicurus-Reviews-Reports-e6bee9ea06b74b1cba262ecc4df32cb3?pvs=4", '_blank').focus();
-			else if (id == "week")
+			else if (id == "career")
 				window.open("https://mbpholding.notion.site/Epicurus-Reviews-Career-94236587963746adb7922cc6636a4783?pvs=4", '_blank').focus();
-			else if (id == "month")
+			else if (id == "about")
 				window.open("https://mbpholding.notion.site/Epicurus-Reviews-About-2216f09fb816493492cef56ac33bf476?pvs=4", '_blank').focus();
 			
 
